{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 71,
  "lineage": "b7ff53b3-6941-d606-528a-2244062c17b2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:vpc/vpc-0c517851fa7ded4a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c8238c98a99e366",
            "default_route_table_id": "rtb-0b7ca4bb2ad41f971",
            "default_security_group_id": "sg-0c85f6b5918adcb30",
            "dhcp_options_id": "dopt-f7597791",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c517851fa7ded4a0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b7ca4bb2ad41f971",
            "owner_id": "718122351819"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:internet-gateway/igw-02edd9a2638f7074d",
            "id": "igw-02edd9a2638f7074d",
            "owner_id": "718122351819",
            "tags": {
              "Name": "VPC Internet Gateway"
            },
            "vpc_id": "vpc-0c517851fa7ded4a0"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:security-group/sg-0b2a1ba7916cda255",
            "description": "allow web inbound http traffic to flask app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2a1ba7916cda255",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Flask",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Load balancer port",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "718122351819",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c517851fa7ded4a0"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:security-group/sg-02831b1cb775954e2",
            "description": "private subnet sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02831b1cb775954e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.2.0/24",
                  "10.0.4.0/24"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.2.0/24",
                  "10.0.4.0/24"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.2.0/24",
                  "10.0.4.0/24"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private subnet sg",
            "name_prefix": "",
            "owner_id": "718122351819",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c517851fa7ded4a0"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.subnets[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.subnets[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e0ca500d2d29f98b",
            "owner_id": "718122351819",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02edd9a2638f7074d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for VPC"
            },
            "vpc_id": "vpc-0c517851fa7ded4a0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.networking.aws_internet_gateway.igw"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2c312a10135a3f7",
            "route_table_id": "rtb-0e0ca500d2d29f98b",
            "subnet_id": "subnet-00163e2f21e656870"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.networking.aws_internet_gateway.igw",
            "module.subnets.aws_route_table.vpc_rt",
            "module.subnets.aws_subnet.public_subnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:subnet/subnet-0da66297ef86e98c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0da66297ef86e98c1",
            "map_public_ip_on_launch": false,
            "owner_id": "718122351819",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0c517851fa7ded4a0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:subnet/subnet-00163e2f21e656870",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-00163e2f21e656870",
            "map_public_ip_on_launch": true,
            "owner_id": "718122351819",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0c517851fa7ded4a0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets[1]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03812715d73b3e894",
            "public_dns": "ec2-54-170-153-115.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.170.153.115",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.networking.aws_internet_gateway.igw"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets[1]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03812715d73b3e894",
            "id": "nat-00024f3c0b81e614d",
            "network_interface_id": "eni-03334be3b7fdcdc3d",
            "private_ip": "10.0.2.224",
            "public_ip": "54.170.153.115",
            "subnet_id": "subnet-093e5a5c88fcf3aa0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.networking.aws_internet_gateway.igw",
            "module.subnets.aws_eip.nat_gw_eip",
            "module.subnets.aws_subnet.public_subnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a1ab54237d6362d7",
            "owner_id": "718122351819",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00024f3c0b81e614d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Main Route Table for NAT-ed subnet"
            },
            "vpc_id": "vpc-0c517851fa7ded4a0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.networking.aws_internet_gateway.igw",
            "module.subnets.aws_eip.nat_gw_eip",
            "module.subnets.aws_nat_gateway.nat_gateway",
            "module.subnets.aws_subnet.public_subnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-053638ef6755b400a",
            "owner_id": "718122351819",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02edd9a2638f7074d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for VPC"
            },
            "vpc_id": "vpc-0c517851fa7ded4a0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.networking.aws_internet_gateway.igw"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_nated_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d32c4657f04facf3",
            "route_table_id": "rtb-0a1ab54237d6362d7",
            "subnet_id": "subnet-0e455b183dd16db05"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.networking.aws_internet_gateway.igw",
            "module.subnets.aws_eip.nat_gw_eip",
            "module.subnets.aws_nat_gateway.nat_gateway",
            "module.subnets.aws_route_table.private_nated",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f1c81ad32931773",
            "route_table_id": "rtb-053638ef6755b400a",
            "subnet_id": "subnet-093e5a5c88fcf3aa0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.networking.aws_internet_gateway.igw",
            "module.subnets.aws_route_table.vpc_rt",
            "module.subnets.aws_subnet.public_subnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:subnet/subnet-0e455b183dd16db05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0e455b183dd16db05",
            "map_public_ip_on_launch": false,
            "owner_id": "718122351819",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0c517851fa7ded4a0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:subnet/subnet-093e5a5c88fcf3aa0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-093e5a5c88fcf3aa0",
            "map_public_ip_on_launch": true,
            "owner_id": "718122351819",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0c517851fa7ded4a0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets[2]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.subnets[2]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.subnets[2]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05f2ef9c63557616a",
            "owner_id": "718122351819",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02edd9a2638f7074d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for VPC"
            },
            "vpc_id": "vpc-0c517851fa7ded4a0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.networking.aws_internet_gateway.igw"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets[2]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab9ca7993c40bbad",
            "route_table_id": "rtb-05f2ef9c63557616a",
            "subnet_id": "subnet-087bd94acaf79cf87"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.networking.aws_internet_gateway.igw",
            "module.subnets.aws_route_table.vpc_rt",
            "module.subnets.aws_subnet.public_subnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets[2]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:subnet/subnet-003236c9054207f90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-003236c9054207f90",
            "map_public_ip_on_launch": false,
            "owner_id": "718122351819",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0c517851fa7ded4a0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets[2]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:subnet/subnet-087bd94acaf79cf87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-087bd94acaf79cf87",
            "map_public_ip_on_launch": true,
            "owner_id": "718122351819",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0c517851fa7ded4a0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}